# 3dbag-dasboard

./: .gitignore  3dbag_dashboard.service  NOTICE  README.md  convert_to_parquet.py  pyproject.toml  requirements.txt
app/: dashboard.py
app/assets/: typography.css
src/dashboard/: dashboard.py  run_gunicorn.sh  wsgi.py
